--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
 , "author": { "name": "Stephane Alnet", "email": "stephane@shimaore.net" }
 , "scripts": {
     "prepublish": "coffee -c pico.coffee"
+  , "postpublish": "rm -f pico.js"
   , "pretest": "coffee -c pico.coffee"
   , "test": "coffee -e 'pico = require \"./pico\"; pico.test()'"
+  , "posttest": "rm -f pico.js"
   }
 , "main": "pico.js"
 , "files": ["pico.js"]
