--- a/package.json
+++ b/package.json
@@ -5,21 +5,21 @@
 , "keywords": "couchdb"
 , "author": { "name": "Stephane Alnet", "email": "stephane@shimaore.net" }
 , "scripts": {
-    "prepublish": "coffee -c pico.coffee line_stream.coffee replicate.coffee couchdb_rewrite_url.coffee"
-  , "postpublish": "rm -f pico.js line_stream.js replicate.js couchdb_rewrite_url.js"
-  , "pretest": "coffee -c pico.coffee line_stream.coffee replicate.coffee couchdb_rewrite_url.coffee"
+    "prepublish": "coffee -c pico.coffee replicate.coffee couchdb_rewrite_url.coffee"
+  , "postpublish": "rm -f pico.js replicate.js couchdb_rewrite_url.js"
+  , "pretest": "coffee -c pico.coffee replicate.coffee couchdb_rewrite_url.coffee"
   , "test": "coffee -e 'pico = require \"./pico\"; pico.test()' && coffee -e 'couchdb_rewrite_url = require \"./couchdb_rewrite_url\"; couchdb_rewrite_url.test()'"
-  , "posttest": "rm -f pico.js line_stream.js replicate.js couchdb_rewrite_url.js"
+  , "posttest": "rm -f pico.js replicate.js couchdb_rewrite_url.js"
   }
 , "main": "pico.js"
 , "files": [
     "pico.js"
-  , "line_stream.js"
   , "replicate.js"
   , "couchdb_rewrite_url.js"
   ]
 , "dependencies": {
     "request": ">=2.9.100"
+  , "byline": ">=2.0.3"
   }
 , "engines": { "node": ">=0.4.7" }
 , "private": false
