--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "pico"
 , "version": "0.1.2"
 , "description": "A Smaller CouchDB Client"
-, "keywords": "couchdb"
+, "keywords": ["couchdb"]
 , "author": { "name": "Stephane Alnet", "email": "stephane@shimaore.net" }
 , "scripts": {
     "prepublish": "coffee -c pico.coffee replicate.coffee couchdb_rewrite_url.coffee"
