https://github.com/jahewson/node-byline/issues/21 breaks pico.

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   ]
 , "dependencies": {
     "request": ">=2.16.6"
-  , "byline": ">=2.0.3"
+  , "byline": ">=2.0.3 <4.0.0"
   }
 , "private": false
 }
