--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
 , "scripts": {
     "prepublish": "coffee -c pico.coffee replicate.coffee couchdb_rewrite_url.coffee"
   , "postpublish": "rm -f pico.js replicate.js couchdb_rewrite_url.js"
-  , "pretest": "coffee -c pico.coffee replicate.coffee couchdb_rewrite_url.coffee"
+  , "pretest": "coffee -c pico.coffee replicate.coffee couchdb_rewrite_url.coffee; (cd test && ./start-couchdb.sh &); sleep 5"
   , "test": "coffee -e 'pico = require \"./pico\"; pico.test()' && coffee -e 'couchdb_rewrite_url = require \"./couchdb_rewrite_url\"; couchdb_rewrite_url.test()'"
-  , "posttest": "rm -f pico.js replicate.js couchdb_rewrite_url.js"
+  , "posttest": "rm -f pico.js replicate.js couchdb_rewrite_url.js && killall -g beam.smp"
   }
 , "main": "pico.js"
 , "files": [
