--- a/package.json
+++ b/package.json
@@ -1,25 +1,33 @@
 {
-  "name": "pico"
-, "version": "0.1.17"
-, "description": "A Smaller CouchDB Client"
-, "keywords": ["couchdb"]
-, "author": { "name": "Stephane Alnet", "email": "stephane@shimaore.net" }
-, "scripts": {
-    "prepublish": "coffee -c pico.coffee replicate.coffee couchdb_rewrite_url.coffee"
-  , "postpublish": "rm -f pico.js replicate.js couchdb_rewrite_url.js"
-  , "pretest": "coffee -c pico.coffee replicate.coffee couchdb_rewrite_url.coffee; (cd test && ./start-couchdb.sh &); sleep 5"
-  , "test": "coffee -e 'pico = require \"./pico\"; pico.test()' && coffee -e 'couchdb_rewrite_url = require \"./couchdb_rewrite_url\"; couchdb_rewrite_url.test()'"
-  , "posttest": "rm -f pico.js replicate.js couchdb_rewrite_url.js && killall -g beam.smp"
+  "name": "pico",
+  "version": "0.1.17",
+  "description": "A Smaller CouchDB Client",
+  "keywords": [
+    "couchdb"
+  ],
+  "author": {
+    "name": "Stephane Alnet",
+    "email": "stephane@shimaore.net"
+  },
+  "scripts": {
+    "prepublish": "coffee -c pico.coffee replicate.coffee couchdb_rewrite_url.coffee",
+    "postpublish": "rm -f pico.js replicate.js couchdb_rewrite_url.js",
+    "pretest": "coffee -c pico.coffee replicate.coffee couchdb_rewrite_url.coffee; (cd test && ./start-couchdb.sh &); sleep 5",
+    "test": "coffee -e 'pico = require \"./pico\"; pico.test()' && coffee -e 'couchdb_rewrite_url = require \"./couchdb_rewrite_url\"; couchdb_rewrite_url.test()'",
+    "posttest": "rm -f pico.js replicate.js couchdb_rewrite_url.js && killall -g beam.smp"
+  },
+  "main": "pico.js",
+  "files": [
+    "pico.js",
+    "replicate.js",
+    "couchdb_rewrite_url.js"
+  ],
+  "dependencies": {
+    "request": ">=2.16.6",
+    "byline": ">=2.0.3 <4.0.0"
+  },
+  "private": false,
+  "devDependencies": {
+    "coffee-script": "~1.6.3"
   }
-, "main": "pico.js"
-, "files": [
-    "pico.js"
-  , "replicate.js"
-  , "couchdb_rewrite_url.js"
-  ]
-, "dependencies": {
-    "request": ">=2.16.6"
-  , "byline": ">=2.0.3 <4.0.0"
-  }
-, "private": false
 }
