--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,5 @@ node_js:
 branches:
   only:
     - master
+before_script: "(cd test && ./start-couchdb.sh &); sleep 5"
+after_script: "killall beam.smp"
